# Hybrid-Quant-Research

./: .gitattributes  .gitignore  CONTRIBUTING.md  MOMENTUM_STRATEGY_GUIDE.md  PROJECT_ROADMAP.md  README.md
Engine/: CMakeLists.txt  README.md
Engine/include/: Bar.hpp  CircularBuffer.hpp  Engine.hpp  ExecutionEngine.hpp  Indicators.hpp  MarketDataManager.hpp  RiskManager.hpp  Strategies.hpp  features.hpp
Engine/python_bindings/: pybind_module.cpp
Engine/src/: MarketDataManager.cpp  features.cpp  main.cpp
Research/failures/: momentum_balanced.py  momentum_profitable.py  momentum_robust.py  momentum_strict.py  run_momentum_analysis.py  strategy.py  strategy_5min.py  test_momentum_robust.py  volatility_breakout_strategy.py
Research/notebooks/: 5min_testing.ipynb  IMPORT_INSTRUCTIONS.md  Mean_reversion.ipynb  Strategy2.ipynb  cleaning.ipynb  explore.ipynb  features_all.ipynb  import_helper.py  load_data.ipynb  momentum_research.ipynb  strategy.ipynb
Research/src/: allocator.py  cleaning.py  feature.py  features.py  regimes.py  runner.py  test_enhanced_strategies.py
Research/src/strategies/: cash.py  mean_reversion.py  momentum.py
